Bug 328866 - Unable to build kdepim with -DKDEPIM_NO_WEBKIT:BOOL=ON
Summary: Unable to build kdepim with -DKDEPIM_NO_WEBKIT:BOOL=ON
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: libkdepim (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-16 14:23 UTC by Martin Kyral
Modified: 2014-08-15 11:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.1
Sentry Crash Report:


Attachments
proposed patch (959 bytes, patch)
2014-01-13 14:06 UTC, Martin Kyral
Details
fixed patch (unable to link with the original one) (2.55 KB, patch)
2014-01-13 16:47 UTC, Martin Kyral
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Kyral 2013-12-16 14:23:33 UTC
[ 69%] Building CXX object messageviewer/CMakeFiles/messageviewer.dir/viewer/messagedisplayformatattribute.o
cd /home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/x86_64-redhat-linux-gnu/messageviewer && /bin/c++   -DDISABLE_NEPOMUK_LEGACY -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=27 -DKDEPIM_NO_WEBKIT -DKDE_DEPRECATED_WARNINGS -DMAKE_MESSAGEVIEWER_LIB -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_STL -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -D_BSD_SOURCE -D_REENTRANT -D_XOPEN_SOURCE=500 -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector-strong --param=ssp-buffer-size=4 -grecord-gcc-switches  -m64 -mtune=generic  -Wnon-virtual-dtor -Wno-long-long -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -Werror=return-type -fvisibility-inlines-hidden -fexceptions -UQT_NO_EXCEPTIONS -O2 -DNDEBUG -DQT_NO_DEBUG -fPIC -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/x86_64-redhat-linux-gnu/messageviewer -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97 -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/x86_64-redhat-linux-gnu -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/grantleetheme -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messagecore -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/pimcommon -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/libkdepim -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/libkleo -I/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/kaddressbookgrantlee -I/usr/include/kde4 -I/usr/include/kde4/KDE -I/usr/include/KDE -I/usr/include/phonon -I/usr/include/QtXmlPatterns -I/usr/include/QtXml -I/usr/include/QtWebKit -I/usr/include/QtUiTools -I/usr/include/QtTest -I/usr/include/QtSvg -I/usr/include/QtSql -I/usr/include/QtScriptTools -I/usr/include/QtScript -I/usr/include/QtOpenGL -I/usr/include/QtNetwork -I/usr/include/QtMultimedia -I/usr/include/QtHelp -I/usr/include/QtDesigner -I/usr/include/QtDeclarative -I/usr/include/QtDBus -I/usr/include/Qt3Support -I/usr/include/QtGui -I/usr/include/QtCore -I/usr/include/Qt -I/usr/lib64/qt4/mkspecs/default -I//include    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/messageviewer.dir/viewer/messagedisplayformatattribute.o -c /home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/messagedisplayformatattribute.cpp
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp: In member function 'void MessageViewer::ViewerPrivate::createActions()':
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp:1830:3: error: 'mCaretBrowsing' was not declared in this scope
   mCaretBrowsing = new KToggleAction(i18n("Toggle Caret Browsing"), this);
   ^
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp: In member function 'void MessageViewer::ViewerPrivate::slotFind()':
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp:2199:17: error: 'class MessageViewer::MailWebView' has no member named 'hasSelection'
   if ( mViewer->hasSelection() )
                 ^
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp: At global scope:
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp:3164:6: warning: unused parameter 'zoomFactor' [-Wunused-parameter]
 void ViewerPrivate::setZoomFactor( qreal zoomFactor )
      ^
/home/mkyral/rpmbuild/BUILD/kdepim-4.11.97/messageviewer/viewer/viewer_p.cpp:3319:6: warning: unused parameter 'filename' [-Wunused-parameter]
 void ViewerPrivate::saveMainFrameScreenshotInFile(const QString &filename)
      ^

Seems that some #ifndef is missing there... It shall be either added, or support for KDEPIM_NO_WEBKIT dropped because of the deep dependency on WebKit.

Reproducible: Always
Comment 1 Laurent Montel 2013-12-24 09:14:50 UTC
I confirm it.
Will fix it soon.
Comment 2 Laurent Montel 2013-12-24 09:18:09 UTC
I confirm it .
Will fix soon
Comment 3 Laurent Montel 2014-01-03 06:59:01 UTC
Git commit abe75356c2956f5d8f319cc1137c3a87769ae7ab by Montel Laurent.
Committed on 03/01/2014 at 06:57.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 328866 - Unable to build kdepim with -DKDEPIM_NO_WEBKIT:BOOL=ON

FIXED-IN: 4.12.1

M  +2    -0    messageviewer/adblock/tests/CMakeLists.txt
M  +6    -0    messageviewer/scamdetection/scamdetection.cpp
M  +3    -4    messageviewer/viewer/mailwebview_textbrowser.cpp
M  +4    -0    messageviewer/viewer/viewer.cpp
M  +4    -0    messageviewer/viewer/viewer_p.cpp

http://commits.kde.org/kdepim/abe75356c2956f5d8f319cc1137c3a87769ae7ab
Comment 4 Martin Kyral 2014-01-07 09:08:29 UTC
Thanks
Comment 5 Martin Kyral 2014-01-13 13:57:09 UTC
Still having this one particular build error with kdepim-4.12.1-1.fc21.src.rpm:

/home/mkyral/rpmbuild/BUILD/kdepim-4.12.1/messageviewer/viewer/viewer_p.cpp: In member function 'void MessageViewer::ViewerPrivate::createActions()':
/home/mkyral/rpmbuild/BUILD/kdepim-4.12.1/messageviewer/viewer/viewer_p.cpp:1830:3: error: 'mCaretBrowsing' was not declared in this scope
   mCaretBrowsing = new KToggleAction(i18n("Toggle Caret Browsing"), this);
Comment 6 Martin Kyral 2014-01-13 14:06:13 UTC
Created attachment 84620 [details]
proposed patch
Comment 7 Laurent Montel 2014-01-13 14:11:51 UTC
I applied your patch.
(We must reopen a bug as REOPEN not UNCONFIRMED)
Comment 8 Laurent Montel 2014-01-13 14:15:03 UTC
Question: Why do you build without qtwebkit ?
Comment 9 Martin Kyral 2014-01-13 16:47:52 UTC
Created attachment 84625 [details]
fixed patch (unable to link with the original one)

Please apply this one and sorry for the mess, I uploaded the patch before verifying it's working. This one builds and runs ;)
Comment 10 Laurent Montel 2014-01-14 08:16:44 UTC
Git commit bc31fce2cdc6b70cd5667524c9d872cb68d3d973 by Montel Laurent.
Committed on 14/01/2014 at 08:15.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 328866 - Unable to build kdepim with -DKDEPIM_NO_WEBKIT:BOOL=ON

Apply new patch from Martin Kyral

M  +4    -1    kmail/configuredialog/configuredialog.cpp
M  +4    -0    kmail/configuredialog/configuredialog_p.h

http://commits.kde.org/kdepim/bc31fce2cdc6b70cd5667524c9d872cb68d3d973
Comment 11 Martin Kyral 2014-08-15 11:59:33 UTC
(In reply to Laurent Montel from comment #8)
> Question: Why do you build without qtwebkit ?

Sorry for not responding your question earlier: almost all the kontact binaries were dropped from RHEL7 due to the qtwebkit dependency. Having this build option working will ease adding them back.