Fix Bug 328866 - Unable to build kdepim with -DKDEPIM_NO_WEBKIT:BOOL=ON

FIXED-IN: 4.12.1
BUG: 328866