messageviewer/viewer/viewer_p.cpp
@@ -2196,8 +2196,10 @@ void ViewerPrivate::slotToggleHtmlMode()
 
 void ViewerPrivate::slotFind()
 {
+#ifndef KDEPIM_NO_WEBKIT
   if ( mViewer->hasSelection() )
     mFindBar->setText( mViewer->selectedText() );
+#endif
   mFindBar->show();
   mFindBar->focusAndSetCursor();
 }
@@ -3343,7 +3345,9 @@ void ViewerPrivate::slotBlockImage()
 {
     if (mImageUrl.isEmpty())
         return;
+#ifndef KDEPIM_NO_WEBKIT
     MessageViewer::AdBlockManager::self()->addCustomRule(mImageUrl.url(), true);
+#endif
 }
 
 void ViewerPrivate::slotOpenBlockableItems()
